# iLQR_CppAD

./: CMakeLists.txt  README.md
README.assets/: Acrobot_video.mkv
env/: Acrobot.xml
include/: Acrobot_iLQR.h  Mujoco_Acrobot.h  Mujoco_visualize.h  iLQR_CppAD.h
src/: Acrobot_iLQR.copy.cpp  Acrobot_iLQR.cpp  Mujoco_Acrobot.cpp  Mujoco_visualize.cpp  iLQR_CppAD.cpp
